// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-input > renders a disabled input 1`] = `
"<span
  class="field"
>
  <label
    class="field__label field__label--start field__label--disabled"
    for="textbox"
  >
    Email address
  </label>
  <span
    class="textbox textbox--disabled"
  >
    <input
      class="textbox__control"
      disabled=""
      id="textbox"
      value="test"
    />
  </span>
</span>"
`;

exports[`evo-input > renders a disabled input with disabled floating label 1`] = `
"<span
  class="floating-label"
>
  <label
    class="floating-label__label floating-label__label--animate floating-label__label--disabled floating-label__label--inline"
    for="GENERATED-0"
  >
    Email address
  </label>
  <span
    class="textbox textbox--disabled"
  >
    <input
      class="textbox__control"
      disabled=""
      id="GENERATED-0"
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with external label 1`] = `
"<span
  class="field"
>
  <label
    class="field__label field__label--start"
    for="textbox"
  >
    Email address
  </label>
  <span
    class="textbox"
  >
    <input
      class="textbox__control"
      id="textbox"
      value="test"
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with floating label and without prefix icon 1`] = `
"<span
  class="floating-label"
>
  <label
    class="floating-label__label floating-label__label--animate floating-label__label--inline"
    for="GENERATED-1"
  >
    test label
  </label>
  <span
    class="textbox"
  >
    <svg
      aria-hidden="true"
      class="icon icon--24"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M4 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h16a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3H4Zm17 3.5V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v.5l8.4 6.3a1 1 0 0 0 1.2 0L21 6.5ZM3 9v9a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9l-7.2 5.4a3 3 0 0 1-3.6 0L3 9Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-mail-24"
      />
    </svg>
    <input
      class="textbox__control"
      id="GENERATED-1"
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with inline floating label 1`] = `
"<span
  class="floating-label"
>
  <label
    class="floating-label__label floating-label__label--animate floating-label__label--inline"
    for="GENERATED-0"
  >
    Email address
  </label>
  <span
    class="textbox"
  >
    <input
      class="textbox__control"
      id="GENERATED-0"
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with inline floating label and an id 1`] = `
"<span
  class="floating-label"
>
  <label
    class="floating-label__label floating-label__label--animate floating-label__label--inline"
    for="text-id"
  >
    Email address
  </label>
  <span
    class="textbox"
  >
    <input
      class="textbox__control"
      id="text-id"
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with invalid/error state 1`] = `
"<span
  class="textbox textbox--invalid"
>
  <input
    aria-invalid="true"
    class="textbox__control"
    id="GENERATED-0"
  />
</span>"
`;

exports[`evo-input > renders an input with opaque floating label 1`] = `
"<span
  class="floating-label"
>
  <label
    class="floating-label__label floating-label__label--animate floating-label__label--inline"
    for="GENERATED-0"
  >
    Email address
  </label>
  <span
    class="textbox"
  >
    <input
      class="textbox__control"
      id="GENERATED-0"
      opaquelabel=""
    />
  </span>
</span>"
`;

exports[`evo-input > renders an input with postfix icon 1`] = `
"<span
  class="textbox"
>
  <input
    class="textbox__control"
    id="GENERATED-0"
    placeholder="name"
  />
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-1"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M16 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-2 0a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Zm-6.404 7.74A8.958 8.958 0 0 1 12 21c-1.68 0-3.25-.46-4.596-1.26C8.147 18.177 9.853 17 12 17c2.147 0 3.853 1.177 4.596 2.74Zm1.62-1.231C17.05 16.424 14.704 15 12 15s-5.05 1.424-6.216 3.508a9 9 0 1 1 12.432 0Z"
        fill-rule="evenodd"
      />
    </symbol>
    <use
      href="#icon-profile-24"
    />
  </svg>
</span>"
`;

exports[`evo-input > renders an input with postfix icon button 1`] = `
"<span
  class="textbox"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M16 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-2 0a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Zm-6.404 7.74A8.958 8.958 0 0 1 12 21c-1.68 0-3.25-.46-4.596-1.26C8.147 18.177 9.853 17 12 17c2.147 0 3.853 1.177 4.596 2.74Zm1.62-1.231C17.05 16.424 14.704 15 12 15s-5.05 1.424-6.216 3.508a9 9 0 1 1 12.432 0Z"
        fill-rule="evenodd"
      />
    </symbol>
    <use
      href="#icon-profile-24"
    />
  </svg>
  <input
    class="textbox__control"
    id="GENERATED-1"
    placeholder="name"
  />
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0 1 24 12c0 6.627-5.373 12-12 12S0 18.627 0 12Zm17.968 5.233a.996.996 0 0 0-.32-.989l-4.277-4.27 4.267-4.272a.995.995 0 0 0-1.402-1.404l-4.268 4.271-4.267-4.28a.998.998 0 1 0-1.413 1.413l4.278 4.271-4.268 4.281a.995.995 0 0 0 1.403 1.404l4.267-4.281 4.277 4.27a.994.994 0 0 0 1.723-.414Z"
      />
    </symbol>
    <use
      href="#icon-clear-24"
    />
  </svg>
</span>"
`;

exports[`evo-input > renders an input with prefix icon 1`] = `
"<span
  class="textbox"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M4 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h16a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3H4Zm17 3.5V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v.5l8.4 6.3a1 1 0 0 0 1.2 0L21 6.5ZM3 9v9a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9l-7.2 5.4a3 3 0 0 1-3.6 0L3 9Z"
        fill-rule="evenodd"
      />
    </symbol>
    <use
      href="#icon-mail-24"
    />
  </svg>
  <input
    class="textbox__control"
    id="GENERATED-1"
    placeholder="email"
  />
</span>"
`;

exports[`evo-input > renders default input 1`] = `
"<span
  class="textbox"
>
  <input
    class="textbox__control"
    id="GENERATED-0"
  />
</span>"
`;

exports[`evo-input > renders default input with an id 1`] = `
"<span
  class="textbox"
>
  <input
    class="textbox__control"
    id="textbox-id"
  />
</span>"
`;

exports[`evo-input > renders fluid input 1`] = `
"<div
  class="textbox textbox--fluid"
>
  <input
    class="textbox__control"
    id="GENERATED-0"
  />
</div>"
`;
